[package]
name = "qsocket"
version = "0.1.1"
edition = "2021"
authors = ["Ege BALCI <egebalci@pm.me>"]
description = "QSocket library."
repository = "https://github.com/qsocket/qsocket-rs"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# native-tls = "0.2.10"
md5 = "0.7.0"
anyhow = "1.0.60"
rustls = { version = "0.20.6", features = ["dangerous_configuration"] }
sha2 = "0.10.6"
srp = "0.6.0"
rand = "0.8.5"
hex = "0.4.3"


[dependencies.blake2]
path = "../blake2"
